# sandbox

./: .gitignore  README.md  literature-and-resources.foundations-of-cs.md  literature-and-resources.job-interview.md  note.md  outline-topics-of-software-engineering.md
pl-python/: README.md  pyproject.toml
pl-python/concurrency/: multi_threading.py  producer_consumer.py
pl-python/coroutine/: async_tasks.py
pl-python/data_processing/: Java_API_8_All_Classes.txt  file_statistic.py
pl-python/data_structures/: dictionary.py  list_comprehensions.py  slicing.py
pl-python/data_types/: numbers.py  type_info.py
pl-python/date_and_time/: date_time.py
pl-python/doc/: algorithms-design.md  asyncio.md  concurrent-programming.md  data-structures-and-algorithms.md  database-programming.md  date-and-time.md  dev-env-of-pythoner.md  gui-programming.md  internet-data-handling.md  io.md  literature-and-references.md  magic-methods.md  modules-and-packages.md  network-programming.md  oop.md  package-management.md  problem-solving.md  scientific-libs.md  string-processing.md  structured-markup-processing.md  topics.md  type-hints.md
pl-python/email_process/: file_listener.py
pl-python/gzip_jsonl/: chat1.md  compress_with_limit.py  gzip_compressor.py  gzip_customized.py  jsonl_reconstructor.py  zlib_gzip.py
pl-python/http_proto/: http_requests.py
pl-python/iterators_and_generators/: generator_exp.py  generator_fun.py
pl-python/json_module/: json_module.py
pl-python/lambda/: filter_map_reduce.py
pl-python/logging-sandbox/: basic_logging.py  logger_config.py
(+3280 files in other folders)
